# docker-django-example

./: Dockerfile  README.md  compose.yaml  pyproject.toml
assets/: package.json
